--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="vi" xmlns="http://www.w3.org/1999/xhtml">
-	
-<!-- Mirrored from webminhthuan.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Aug 2021 06:10:36 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 <link href="images/logo.ico" rel="shortcut icon" type="image/x-icon">
 
-		<title>Thiết kế website Minh Thuận</title>
+		<title>Thiết kế website Nhanh</title>
 		<meta name="keywords" content="thiet ke website">
-		<meta property="og:title" content="Thiết kế website Minh Thuận">
+		<meta property="og:title" content="Thiết kế website Nhanh chất lượng">
 	
 			<meta name="description" content="Chuyên thiết kế website giá rẻ, đẹp, chất lượng. Website thiết kế luôn chuẩn SEO. Dịch vụ thiết kế web bán hàng, web giới thiệu công ty, web giới thiệu dịch vụ và các loại web khác.">
 			<meta property="og:description" content="Chuyên thiết kế website giá rẻ, đẹp, chất lượng. Website thiết kế luôn chuẩn SEO. Dịch vụ thiết kế web bán hàng, web giới thiệu công ty, web giới thiệu dịch vụ và các loại web khác.">
@@ -1315,13 +1313,13 @@
 				<div class="hopbox">
 					<div class="hopbox-noidung">
 						<div class="hotline">
-							<a href="tel:0916789032"><img alt="091 6789 032" src="images/phone.png"> 091 6789 032</a>
+							<a href="tel:0965059812"><img alt="096 5059 812" src="images/phone.png"> 096 5059 812</a>
 						</div>
 						<div class="hotline">
-							<a href="tel:0975888301"><img alt="0975 888 301" src="images/phone.png"> 0975 888 301</a>
+							<a href="tel:0355217613"><img alt="035 5217 613" src="images/phone.png"> 035 5217 613</a>
 						</div>
 						<div class="hotline LastHot">
-							<a href="tel:0947493366"><img alt="09 4749 3366" src="images/phone.png"> 09 4749 3366</a>
+							<a href="tel:0358557305"><img alt="035 8557 305" src="images/phone.png"> 035 8557 305</a>
 						</div>
 					</div>
 				</div>
@@ -1332,7 +1330,7 @@
 				<div class="header2_1">
 					<div class="hopbox">
 						<div class="hopbox-noidung">
-							<a href="index.html"><img alt="Logo thiết kế website Minh Thuận" src="images/logo.png"></a>
+							<a href="index.html"><img alt="Logo thiết kế website Nhanh" src="images/logo.PNG"></a>
 						</div>
 					</div>
 				</div>
