--- a/index.html
+++ b/index.html
@@ -1500,7 +1500,7 @@
 								   <div class="box_thongtin_chitiet2">
 										<a href="quang-cao-google.html">
 										  <div class="hinhanh2">
-											<img class="lazyload" alt="Quảng cáo Google Ads" data-src="https://webminhthuan.com/images/box5.png" src="images/wait.png">
+											<img class="lazyload" alt="Quảng cáo Google Ads" data-src="images/box5.png" src="images/wait.png">
 											<noscript><img alt="Quảng cáo Google Ads" src="images/box5.png"></noscript>
 										  </div>
 										  <div class="tieude2"><h2>Quảng cáo <strong>GOOGLE</strong></h2></div>
@@ -1509,7 +1509,7 @@
 								   <div class="box_thongtin_chitiet2">
 										<a href="quang-cao-facebook.html">
 										  <div class="hinhanh2">
-											<img class="lazyload" alt="Quảng cáo Facebook" data-src="https://webminhthuan.com/images/box6.png" src="images/wait.png">
+											<img class="lazyload" alt="Quảng cáo Facebook" data-src="images/box6.png" src="images/wait.png">
 											<noscript><img alt="Quảng cáo Facebook" src="images/box6.png"></noscript>
 										  </div>
 										  <div class="tieude2"><h2>Quảng cáo <strong>FACEBOOK</strong></h2></div>
@@ -1518,7 +1518,7 @@
 								   <div class="box_thongtin_chitiet2">
 										<a href="quang-cao-coccoc.html">
 										  <div class="hinhanh2">
-											<img class="lazyload" alt="Quảng cáo Cốc Cốc" data-src="https://webminhthuan.com/images/box7.png" src="images/wait.png">
+											<img class="lazyload" alt="Quảng cáo Cốc Cốc" data-src="images/box7.png" src="images/wait.png">
 											<noscript><img alt="Quảng cáo Cốc Cốc" src="images/box7.png"></noscript>
 										  </div>
 										  <div class="tieude2"><h2>Quảng cáo <strong>CỐC CỐC</strong></h2></div>
@@ -1527,7 +1527,7 @@
 								   <div class="box_thongtin_chitiet2">
 										<a href="quang-cao-zalo.html">
 										  <div class="hinhanh2">
-											<img class="lazyload" alt="Quảng cáo Zalo" data-src="https://webminhthuan.com/images/box8.png" src="images/wait.png">
+											<img class="lazyload" alt="Quảng cáo Zalo" data-src="images/box8.png" src="images/wait.png">
 											<noscript><img alt="Quảng cáo Zalo" src="images/box8.png"></noscript>
 										  </div>
 										  <div class="tieude2"><h2>Quảng cáo <strong>ZALO</strong></h2></div>
@@ -1543,11 +1543,11 @@
 							<div class="hopbox-noidung">
 								<div class="tranggioithieuvechungtoi">
 									<div class="noidung_gt0">
-										<p>Ai sinh ra trên đời đều mang trong mình một sứ mệnh mà chúng ta phải dành cả cuộc đời để đi tìm và theo đuổi. Tháng 10 năm 2011, <strong class="strogAZ">CÔNG TY TNHH DỊCH VỤ QUẢNG CÁO <span style="color: #017dc7;">MINH</span> <span style="color: #f68121;">THUẬN</span></strong> được sinh ra với sứ mệnh <em><strong>“Thành công của bạn cũng là thành công của chúng tôi”</strong></em>. Với nhiều năm kinh nghiệm và từng thực hiện trên 3000 dự án trong lĩnh vực thiết kế website, online marketing và là đối tác cao cấp của Google, chúng tôi am hiểu và sẽ đồng hành cùng doanh nghiệp của bạn đi đến đích thành công.</p>
+										<p>Ai sinh ra trên đời đều mang trong mình một sứ mệnh mà chúng ta phải dành cả cuộc đời để đi tìm và theo đuổi.<strong class="strogAZ">DỊCH VỤ TÔI LÀM <span style="color: #017dc7;">WEB</span> <span style="color: #f68121;">NHANH</span></strong> được tạo ra với sứ mệnh <em><strong>“Thành công của bạn cũng là thành công của chúng tôi”</strong></em>. Với nhiều năm kinh nghiệm và từng thực hiện nhiều dự án trong lĩnh vực thiết kế website, online marketing và là đối tác cao cấp của Google, chúng tôi am hiểu và sẽ đồng hành cùng doanh nghiệp của bạn đi đến đích thành công.</p>
 									</div>
 									<div class="noidung_gt1">
 										<h3><i class="fa fa-eye"></i>TẦM NHÌN</h3>
-										<p>Trở thành công ty cung cấp giải pháp bán hàng online hàng đầu và đồng hành cùng tất cả doanh nghiệp ở Việt Nam.</p>
+										<p>Trở thành nhà cung cấp giải pháp bán hàng online hàng đầu và đồng hành cùng tất cả các startup và doanh nghiệp ở Việt Nam.</p>
 									</div>
 									<div class="noidung_gt2">
 										<h3><i class="fa fa-arrows"></i>SỨ MỆNH</h3>
@@ -1556,7 +1556,7 @@
 									<div class="noidung_gt3">
 										<h3><i class="fa fa-chrome"></i>GIÁ TRỊ CỐT LÕI</h3>
 										<div class="hinh_gt">
-											<img class="lazyload" data-src="https://webminhthuan.com/images/bg_gt_3.png" alt="" src="images/wait.png">
+											<img class="lazyload" data-src="images/bg_gt_3.png" alt="" src="images/wait.png">
 											<noscript><img src="images/bg_gt_3.png" alt=""></noscript>
 										</div>
 										<div class="noidung_gt">
@@ -1569,7 +1569,7 @@
 										</div>
 									</div>
 								   <div class="noidung_gt4">
-									  <p><strong><span style="color: #017dc7;">MINH</span> <span style="color: #f68121;">THUẬN</span></strong> với phương châm <em><strong>“Sự hài lòng của khách hàng là trên hết”</strong></em>&nbsp; chúng tôi luôn đặt tiêu chí của khách hàng lên hàng đầu, dùng những sự chuyên nghiệp nhất của chúng tôi để đáp ứng tất cả những yêu cầu của khách hàng và làm khách hàng luôn hài lòng.</p>
+									  <p><strong><span style="color: #017dc7;">WEB</span> <span style="color: #f68121;">NHANH</span></strong> với phương châm <em><strong>“Sự hài lòng của khách hàng là trên hết”</strong></em>&nbsp; chúng tôi luôn đặt tiêu chí của khách hàng lên hàng đầu, dùng những sự chuyên nghiệp nhất của chúng tôi để đáp ứng tất cả những yêu cầu của khách hàng và làm khách hàng luôn hài lòng.</p>
 								   </div>
 								</div>
 							</div>
