--- a/index.html
+++ b/index.html
@@ -1656,7 +1656,7 @@
 				<a target="_blank" href="http://zalo.me/0965059812"><img alt="Chat Zalo" src="images/support1.png"> 0965059812</a>
 			</div>
 			<div class="facebook">
-				<a target="_blank" href="m.me/145573254317329"><img alt="Chat Facebook" src="images/support3.png"> toilamwebnhanh</a>
+				<a target="_blank" href="https://m.me/145573254317329"><img alt="Chat Facebook" src="images/support3.png"> toilamwebnhanh</a>
 			</div>
 					</div>
 	</div>
