--- a/mau-website-0.html
+++ b/mau-website-0.html
@@ -1474,7 +1474,7 @@
 																<h3 class="mauweb_anh">
 																	<span>
 																		<img class="lazyload" src="images/load.gif" data-src="files/san pham4/3346/300_1/jpg/bonganhphat-com_300x300.jpg" alt="bonganhphat.com">
-																		<noscript><img src="files/san pham4/3346/300_1/jpg/bonganhphat-com_300x300.jpg" alt="bonganhphat.com"></noscript>
+																		<noscript><img src="../files/san pham4/3346/300_1/jpg/bonganhphat-com_300x300.jpg" alt="bonganhphat.com"></noscript>
 																	</span>
 																</h3>
 																<h2 class="mauweb_ten">
