--- a/chung-chi-bao-mat-ssl.html
+++ b/chung-chi-bao-mat-ssl.html
@@ -1609,18 +1609,17 @@
 	}
 </script>
 <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/6115627ed6e7610a49afed6c/1fctohfti';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
+<script type="text/javascript" defer="defer">
+	var $_Tawk_API={},$_Tawk_LoadStart=new Date();
+	(function(){
+	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+	s1.async=true;
+	s1.src='https://embed.tawk.to/6115627ed6e7610a49afed6c/1fctohfti';
+	s1.charset='UTF-8';
+	s1.setAttribute('crossorigin','*');
+	s0.parentNode.insertBefore(s1,s0);
+	})();
 </script>
-<!--End of Tawk.to Script-->
 <!--End of Tawk.to Script-->
 	</body>
 </html>
