--- a/mau-website-0.html
+++ b/mau-website-0.html
@@ -2199,7 +2199,7 @@
 	{
 		"@context":"http://schema.org",
 		"@type":"WebSite",
-		"url":"https://webminhthuan.com"
+		"url":"https://toilamwebnhanh.github.io"
 	}
 </script>
 <!--Start of Tawk.to Script-->
