--- a/chung-chi-bao-mat-ssl.html
+++ b/chung-chi-bao-mat-ssl.html
@@ -94,7 +94,7 @@
 	.noidunggiua{margin-top:30px;}
 	.hopbox-tieude{font-size:150%;text-align:left;text-transform:uppercase;font-weight:normal;color:#FF2102;margin-bottom:20px;}
 	.noidunggiua .hopbox{padding-bottom:50px;}
-	.header1{background:#36362e;color:white;padding:5px 0px;font-weight:bold;}
+	.header1{background:#4caf50;color:white;padding:5px 0px;font-weight:bold;}
 	.header1 a{color:white;}
 	.header1 .hopbox-noidung{display:table;margin-left:auto;}
 	.header1 .hopbox-noidung>div{display:table-cell;}
@@ -1330,7 +1330,7 @@
 				<div class="header2_1">
 					<div class="hopbox">
 						<div class="hopbox-noidung">
-							<a href="index.html"><img alt="Logo thiết kế website Nhanh" src="images/logo.png"></a>
+							<a href="index.html"><img alt="Logo thiết kế website Nhanh" src="images/logo.PNG"></a>
 						</div>
 					</div>
 				</div>
@@ -1609,17 +1609,18 @@
 	}
 </script>
 <!--Start of Tawk.to Script-->
-<script type="text/javascript" defer="defer">
-	var $_Tawk_API={},$_Tawk_LoadStart=new Date();
-	(function(){
-	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-	s1.async=true;
-	s1.src='https://embed.tawk.to/6115627ed6e7610a49afed6c/1fctohfti';
-	s1.charset='UTF-8';
-	s1.setAttribute('crossorigin','*');
-	s0.parentNode.insertBefore(s1,s0);
-	})();
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/6115627ed6e7610a49afed6c/1fctohfti';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
 </script>
 <!--End of Tawk.to Script-->
+
 	</body>
 </html>
