--- a/giao-dien-website-co-san.html
+++ b/giao-dien-website-co-san.html
@@ -94,7 +94,7 @@
 	.noidunggiua{margin-top:30px;}
 	.hopbox-tieude{font-size:150%;text-align:left;text-transform:uppercase;font-weight:normal;color:#FF2102;margin-bottom:20px;}
 	.noidunggiua .hopbox{padding-bottom:50px;}
-	.header1{background:#36362e;color:white;padding:5px 0px;font-weight:bold;}
+	.header1{background:#4caf50;color:white;padding:5px 0px;font-weight:bold;}
 	.header1 a{color:white;}
 	.header1 .hopbox-noidung{display:table;margin-left:auto;}
 	.header1 .hopbox-noidung>div{display:table-cell;}
@@ -959,7 +959,7 @@
 		line-height: 36px;
 		text-align: center;
 	}
-	.giabimoi{background:#36362E;color:white;font-weight:bold;}
+	.giabimoi{background:#36362e;color:white;font-weight:bold;}
 	.giabimoi div{text-transform:uppercase;font-size:140%;margin-top:5px;}
 	.giabimoi p{margin:5px 0px;font-size:250%;}
 	/* Sản phẩm */
