--- a/mau-website-24.html
+++ b/mau-website-24.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="vi-VN" class="fa-events-icons-ready">
 	
-<!-- Mirrored from webminhthuan.com/mau-website-24.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Aug 2021 06:11:47 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 <link href="images/logo.ico" rel="shortcut icon" type="image/x-icon">
 
-		<title>Thiết kế web Minh Thuận</title>
+		<title>Thiết kế web nhanh uy tín</title>
 		<meta name="keywords" content="cong ty thiet ke website gia re">
-		<meta property="og:title" content="Thiết kế web Minh Thuận">
+		<meta property="og:title" content="Thiết kế web wordpress">
 	<meta property="og:type" content="website">
 <meta property="og:image" content="images/facebookshare.png" />
 <!-- Google Code dành cho Thẻ tiếp thị lại -->
@@ -93,7 +92,7 @@
 	.noidunggiua{margin-top:30px;}
 	.hopbox-tieude{font-size:150%;text-align:left;text-transform:uppercase;font-weight:normal;color:#FF2102;margin-bottom:20px;}
 	.noidunggiua .hopbox{padding-bottom:50px;}
-	.header1{background:#36362e;color:white;padding:5px 0px;font-weight:bold;}
+	.header1{background:#4caf50;color:white;padding:5px 0px;font-weight:bold;}
 	.header1 a{color:white;}
 	.header1 .hopbox-noidung{display:table;margin-left:auto;}
 	.header1 .hopbox-noidung>div{display:table-cell;}
@@ -1312,13 +1311,13 @@
 				<div class="hopbox">
 					<div class="hopbox-noidung">
 						<div class="hotline">
-							<a href="tel:0916789032"><img alt="091 6789 032" src="images/phone.png"> 091 6789 032</a>
+							<a href="tel:0965059812"><img alt="096 5059 812" src="images/phone.png"> 096 5059 812</a>
 						</div>
 						<div class="hotline">
-							<a href="tel:0975888301"><img alt="0975 888 301" src="images/phone.png"> 0975 888 301</a>
+							<a href="tel:0355217613"><img alt="035 5217 613" src="images/phone.png"> 035 5217 613</a>
 						</div>
 						<div class="hotline LastHot">
-							<a href="tel:0947493366"><img alt="09 4749 3366" src="images/phone.png"> 09 4749 3366</a>
+							<a href="tel:0358557305"><img alt="035 8557 305" src="images/phone.png"> 035 8557 305</a>
 						</div>
 					</div>
 				</div>
@@ -1329,7 +1328,7 @@
 				<div class="header2_1">
 					<div class="hopbox">
 						<div class="hopbox-noidung">
-							<a href="index.html"><img alt="Logo thiết kế website Minh Thuận" src="images/logo.png"></a>
+							<a href="index.html"><img alt="Logo thiết kế website Nhanh" src="images/logo.PNG"></a>
 						</div>
 					</div>
 				</div>
@@ -2092,14 +2091,14 @@
 							<div class="rowfooter">
 								<div class="cellfooter cellfooter1">
 									<div class="blockfoot">
-										<p>CTY TNHH DỊCH VỤ QUẢNG CÁO MINH THUẬN</p>
-										<p>Mã số thuế : 0314737404</p>
-										<p>Website: webminhthuan.com - websitere.vn - thietkewebchatluong.net</p>
-										<div class="Cert">
+										<p>DỊCH VỤ LÀM WEBSITE NHANH, WEB WORDPRESS</p>
+										<p>Địa chỉ : mỹ đức - hà nội</p>
+										<p>Website: https://toilamwebnhanh.github.io - https://toilamwebnhanh.blogspot.com</p>
+										<!--<div class="Cert">
 											<div class="Cert1">
-																										<a href="https://www.google.com/partners/agency?id=4610655207" target="_blank">
-															<img src="http://www.gstatic.com/partners/badge/images/2021/PartnerBadgeClickable.svg" height="110"/>
-														</a>
+												<a href="https://www.google.com/partners/agency?id=4610655207" target="_blank">
+												<img src="http://www.gstatic.com/partners/badge/images/2021/PartnerBadgeClickable.svg" height="110"/>
+												</a>
 																								
 											</div>
 											<div class="Cert2">
@@ -2108,29 +2107,29 @@
 										</div>
 										<p>* <strong style="color: #ffff00;">Đối tác cao cấp của GOOGLE</strong> ( xác thực bằng cách khi bấm vào logo GOOGLE PARTNER sẽ link đến trang google.com có chứa hồ sơ thông tin công ty của đối tác )</p>
 									</div>
-								</div>
+								</div>-->
 								<div class="cellfooter cellfooter2">
 									<div class="blockfoot">
-																						<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP TP.HCM :</span>&nbsp;220 / 22 / 22 Âu Cơ, phường 9, quận Tân Bình, TP.HCM <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/g6zSRbgofbwgPhPh6">( xem bản đồ )</a></p>
+												<!--<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP TP.HCM :</span>&nbsp;220 / 22 / 22 Âu Cơ, phường 9, quận Tân Bình, TP.HCM <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/g6zSRbgofbwgPhPh6">( xem bản đồ )</a></p>
 												<p>Hotline : <a href="tel:02866798083" data-mce-href="tel:02866798083">(028) 6679 8083</a> - <a href="tel:0916789032" data-mce-href="tel:0916789032"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">091 6789 032</span></a> - <a href="tel:0975888301" data-mce-href="tel:0975888301"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">0975 888 301</span></a></p>
 												<p>
 													<bianh>Email :&nbsp;<span style="color: #ffffff;" data-mce-style="color: #ffffff;">thuyvy@dangnhanhonline.com</span></bianh>
-												</p>
-												<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP Hà Nội :</span>&nbsp;số 25 ngõ 254D đường Minh Khai, quận Hoàng Mai, TP. Hà Nội <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/xYRos1gnuVdYjaYe6">( xem bản đồ )</a></p>
+												</p>-->
+												<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP Hà Nội :</span>&nbsp;2 thôn thượng, hồng sơn, mỹ đức, TP. Hà Nội <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/3Vr82NpjrfMxEM6g8">( xem bản đồ )</a></p>
 												<p>
-													Hotline : <a href="tel:0947493366" data-mce-href="tel:0947493366"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">09 4749 3366</span></a> - <a href="tel:0947741199" data-mce-href="tel:0947741199"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">09 4774 1199</span></a>
+													Hotline : <a href="tel:0965059812" data-mce-href="tel:0965059812"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">0965059812</span></a> - <a href="tel:0355217613" data-mce-href="tel:0355217613"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">0355217613</span></a>
 												</p>
 												<p>
-													<bianh>Email :&nbsp;<span style="color: #ffffff;" data-mce-style="color: #ffffff;">thong@websitere.vn</span></bianh>
+													<bianh>Email :&nbsp;<span style="color: #ffffff;" data-mce-style="color: #ffffff;">toilamwebnhanh@gmail.com</span></bianh>
 												</p>
-																				<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP Đà Nẵng :</span>&nbsp;57 / 3 Tôn Thất Tùng, quận Thanh Khê, TP. Đà Nẵng <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/dabAted6ooPjVmCi9">( xem bản đồ )</a></p>
+												<!--<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP Đà Nẵng :</span>&nbsp;57 / 3 Tôn Thất Tùng, quận Thanh Khê, TP. Đà Nẵng <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/dabAted6ooPjVmCi9">( xem bản đồ )</a></p>
 										<p>
 											Hotline : <a href="tel:0947493366" data-mce-href="tel:0947493366"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">09 4749 3366</span></a>
 										</p>
 										<p><span style="color: #00ffde;" data-mce-style="color: #00ffde;">VP Cà Mau :</span>&nbsp;165 Lê Hồng Phong, phường 8, TP. Cà Mau <a style="text-decoration:underline;font-size:85%;font-style:italic;margin-left:5px;" target="_blank" href="https://goo.gl/maps/fyPxRPnzywZiu7jW6">( xem bản đồ )</a></p>
 										<p>
 											Hotline : <a href="tel:0945672200" data-mce-href="tel:0945672200"><span style="color: #ffff00;" data-mce-style="color: #ffff00;">09 4567 2200</span></a>
-										</p>
+										</p>-->
 									</div>
 								</div>
 							</div>
@@ -2146,8 +2145,8 @@
     <div class="phonering-alo-ph-circle"></div>
     <div class="phonering-alo-ph-circle-fill"></div>
     <div class="phonering-alo-ph-img-circle">
-		<a class="pps-btn-img" onclick="return gtag_report_conversion('tel:0916789032');" href="tel:0916789032">
-			<img alt="Gọi ngay 0916789032" src="images/ph11.png" class="img-responsive">
+		<a class="pps-btn-img" onclick="return gtag_report_conversion('tel:0965059812');" href="tel:0965059812">
+			<img alt="Gọi ngay 0965059812" src="images/ph11.png" class="img-responsive">
 		</a>
 	</div>
 </div>
@@ -2158,13 +2157,14 @@
 		</div>
 		<div class="skypeblock_noidung">
 			<div class="zalo">
-				<a target="_blank" href="http://zalo.me/0975888301"><img alt="Chat Zalo" src="images/support1.png"> 0975888301</a>
+				<a target="_blank" href="http://zalo.me/0965059812"><img alt="Chat Zalo" src="images/support1.png"> 0965059812</a>
 			</div>
 			<div class="facebook">
-				<a target="_blank" href="https://www.messenger.com/t/thietkewebminhthuan"><img alt="Chat Facebook" src="images/support3.png"> thietkewebminhthuan</a>
+				<a target="_blank" href="https://m.me/145573254317329"><img alt="Chat Facebook" src="images/support3.png"> toilamwebnhanh</a>
 			</div>
-					</div>
+		</div>
 	</div>
+</div>
 </div>
 <div class="popupThemes">
 	
@@ -2209,7 +2209,7 @@
 	(function(){
 	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
 	s1.async=true;
-	s1.src='https://embed.tawk.to/551c03acdea155ee59f1e2d5/default';
+	s1.src='https://embed.tawk.to/6115627ed6e7610a49afed6c/1fctohfti';
 	s1.charset='UTF-8';
 	s1.setAttribute('crossorigin','*');
 	s0.parentNode.insertBefore(s1,s0);
@@ -2217,6 +2217,4 @@
 </script>
 <!--End of Tawk.to Script-->
 	</body>
-
-<!-- Mirrored from webminhthuan.com/mau-website-24.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Aug 2021 06:12:02 GMT -->
 </html>
